clusters/talos-robbinsdale/apps/flux-system/capacitor/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: envoy-gateway-system
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: envoy-gateway-system
  hostnames:
    - "capacitor.rajsingh.info"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: capacitor
          port: 9000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
